[package]
name = "permanent_cig"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.74"
bitvec = "1.0.1"
blake3 = "1.4.1"
clap = { version = "4.3.23", features = ["derive"] }
fastrand = "2.0.0"
itertools = "0.11.0"
libc = "0.2.147"
linux-raw-sys = "0.4.5"
serde = "1.0.183"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
permanent_common = { path = "../permanent_common" }
